tests/ui/rfc-2632-const-trait-impl/call-generic-method-nonconst.stderr
error[E0277]: the trait bound `S: ~const Foo` is not satisfied
  --> $DIR/call-generic-method-nonconst.rs:23:22
   |
LL | pub const EQ: bool = equals_self(&S);
   |                      ^^^^^^^^^^^^^^^ the trait `~const Foo` is not implemented for `S`
   |
note: the trait `Foo` is implemented for `S`, but that implementation is not `const`
  --> $DIR/call-generic-method-nonconst.rs:23:22
   |
LL | pub const EQ: bool = equals_self(&S);
   |                      ^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
